--- a/LoLMarkdownDoc.Rmd
+++ b/LoLMarkdownDoc.Rmd
@@ -16,6 +16,8 @@ library(stringr)
 library(rjson)
 library(purrr)
 library(RJSONIO)
+library(png)
+library(knitr)
 rawloldata <- read_csv("C:/Users/paulr/OneDrive/Documents/R/Project Data/games.csv")
 rawlolnamesjson <- RJSONIO::fromJSON("C:/Users/paulr/OneDrive/Documents/R/Project Data/champion_info_2_edit.json")
 
@@ -47,9 +49,18 @@ leaguegames <- rawloldata %>%
 
 League of Legends is a video game of the MOBA genre (Multi-Online-Battle-Arena) which was released in 2009 by Riot Games and has persisted as one of the most played games to this day. Briefly summarised, this game features a player vs player, 5v5 team format. Each team consists of 5 players that can pick a character (champion) at their choosing, each with their own skills and abilities and they will compete on a battlefield against the other team of 5. The battlefield is symmetrical with two core bases (nexus), and a number of structures defending their base. The team to break through the defences and destroy the enemy nexus first wins. Throughout this game though, there are a number of objectives that can be claimed by each team, however this requires a lot of strategy and communication across team members. Games typically last between 20-40 minutes and due to the multitude of actions you as a player can perform in a single match, the possibilities and strategies are endless when it comes to how you and your team compose your victory. A pressing question especially in the context of esports will come down to, 'what makes a successful team?' (Nascimento Junior et al., 2017). Therefore, upon acquiring a dataset of played League of Legends games from Kaggle which display various statistics like objectives taken, I aim to identify what elements or objectives result in the largest probability to win any given game.
 
-First let us take a look at some of the statistics of our data set (`r rawloldata %>% nrow()` total observations):
+
+```{r image, echo = FALSE}
+# All defaults
+img1_path <- "C:/Users/paulr/OneDrive/Documents/R/Project Data/LoL-Data-Project/summonersriftmap.png"
+include_graphics(img1_path)
+```
+
+(Summoner's Rift: a bird's eye view of the map in game (credit: Riot Games))
+
 
 ## Summary Statistics
+First let us take a look at some of the statistics of our data set (`r rawloldata %>% nrow()` total observations):
 ```{r summarystat, echo=FALSE}
 leaguegames %>% select(gameDuration, winner, firstBlood, firstTower, firstInhibitor, firstBaron, firstDragon, firstRiftHerald) %>% summary()
 ```
@@ -158,7 +169,7 @@ The following visual outlines the number of games won depending on how many enem
 leaguegames %>% 
   filter(winner == 1) %>% 
   ggplot(aes(x = t1_towerKills)) + geom_bar(fill = "steelblue") + 
-  labs(title = "Figure 9. Number of Games Won Based on Number of Towers Destroyed", x = "Number of Enemy Towers Destroyed", y = "Number of Games Won")
+  labs(title = "Figure 9. Number of Games Won Based on Number of Towers Destroyed", x = "Number of Enemy Towers Destroyed", y = "Number of Games Won (Team 1)")
 ```
 
 What can be seen here is that the proportion of games won heavily favor a team taking down the most amount of enemy Towers. Technically speaking, a team cannot destroy the enemy's Nexus if they do not take down at least 5 Towers, so most games under the 5 Tower mark are most likely caused due to the enemy team issuing a surrender. However, concluding this part, taking as many towers is highly favorable for a team's chance at succeeding.
@@ -171,7 +182,7 @@ The following visual outlines the number of games won depending on how many enem
 leaguegames %>% 
   filter(winner == 1) %>% 
   ggplot(aes(x = t1_inhibitorKills)) + geom_bar(fill = "steelblue") + 
-  labs(title = "Figure 10. Number of Games Won Based on Number of Inhibitors Destroyed", x = "Number of Enemy Inhibitors Destroyed", y = "Number of Games Won")
+  labs(title = "Figure 10. Number of Games Won Based on Number of Inhibitors Destroyed", x = "Number of Enemy Inhibitors Destroyed", y = "Number of Games Won (Team 1)")
 ```
 
 Interestingly, although destroying the first Inhibitor was a key factor into winning a game as seen in Figure 5, taking down more than 1 Inhibitor does not really mean a player will win more games. Having destroyed more than 2 Inhibitors will be redundant as the game will be going on for a lot longer than it could be. This is what players might refer to as 'overkill'.
@@ -182,7 +193,7 @@ Lastly, we shall take a look at the Dragon, a non-playable character that acts a
 leaguegames %>% 
   filter(winner == 1) %>% 
   ggplot(aes(x = t1_dragonKills)) + geom_bar(fill = "steelblue") + 
-  labs(title = "Figure 11. Number of Games Won Based on Number of Dragons Slain", x = "Number of Dragons Slain", y = "Number of Games Won")
+  labs(title = "Figure 11. Number of Games Won Based on Number of Dragons Slain", x = "Number of Dragons Slain", y = "Number of Games Won (Team 1)")
 ```
 
 What is fascinating about this distribution is that it seems taking multiple Dragons, more than 2 for instance, does not represent more games being won with that outcome. The reward that the Dragon provides a team increases in impact for every Dragon that team has taken previously. Although taking 4, 5, or even 6 Dragons will mean that any given game will go on for quite some time. A possible outcome from this is that players might prioritize winning quickly over maximum impact (Mora-Cantallops & Sicilia, 2019).
